--- a/scss/mobile/fkb-m-topic-list.scss
+++ b/scss/mobile/fkb-m-topic-list.scss
@@ -318,7 +318,7 @@ body.nav-controls-hidden {
     box-sizing: border-box;
     width: 100%;
     max-width: 100%;
-    padding-block: var(--tds-space-m) !important;
+    padding-block: var(--tds-space-s) !important;
     padding-inline: var(--tds-space-m) !important;
     margin-block-end: 0 !important;
     transform: none !important;
